# sequtils

./: Cargo.toml
data/: r1.fq  r2.fq  test_report.txt
src/: fastq.rs  lib.rs  reader.rs  utils.rs
